--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ This filestyles the plugin's admin pages
 /*
 Error Log Table
 */
+
+h2.cel-title {
+	margin-top: 30px;
+	float: left;
+}
+
+#error-log {
+	clear: both;
+}
 	
 .cel-table {
 	width: 100%; 
@@ -64,6 +73,15 @@ Error Log Table
 	background: #e6e6e6;
 }
 
+.cel-table .cel-new-log td {
+	background: #b9ed91;
+	-webkit-transition: background-color .7s ease-in-out;
+	-moz-transition: background-color .7s ease-in-out;
+	-o-transition: background-color .7s ease-in-out;
+	-ms-transition: background-color .7s ease-in-out;
+	transition: background-color .7s ease-in-out;
+}
+
 .cel-log-filter,
 .cel-log-unfilter {
 	cursor: pointer;
@@ -111,6 +129,18 @@ a.cel-delete-all {
 	float: right;
 	margin-bottom: 5px;
 	cursor: pointer;
+}
+
+#cel-ab-toggle {
+	float: right;
+	margin-right: 15px;
+	margin-top: 30px;
+}
+
+#cel-ab-toggle label {
+	font-size: 0.9em;
+	color: #999;
+	margin-right: 5px;
 }
 
 /*
